<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_parent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/m_10"
    android:elevation="@dimen/m_10"
    app:cardElevation="@dimen/m_5"
    app:cardCornerRadius="@dimen/m_10">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/m_10">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/m_5">

            <TextView
                android:id="@+id/txt_sensor_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="@dimen/s_20"
                android:textStyle="bold" />
            <ImageView
                android:id="@+id/img_edit_sensor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_margin="@dimen/m_5"
                android:src="@drawable/ic_baseline_edit_24"
                android:visibility="visible"/>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/m_10">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_alarm_levels"
                android:textStyle="bold"
                tools:ignore="Suspicious0dp"
                android:layout_marginBottom="@dimen/m_10"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/m_5"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_low"
                    tools:ignore="Suspicious0dp" />

                <TextView
                    android:id="@+id/txt_alarm_low"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/m_10"
                    android:layout_weight="1"
                    android:background="@drawable/round_corner_text"
                    android:gravity="center"
                    android:padding="@dimen/m_5"
                    android:text="1"
                    android:textSize="@dimen/s_16"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt_lbl_alarm_high"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/m_16"
                    android:layout_weight="0.1"
                    android:text="@string/lbl_High"
                    tools:ignore="Suspicious0dp" />

                <TextView
                    android:id="@+id/txt_alarm_high"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/m_10"
                    android:layout_weight="1"
                    android:background="@drawable/round_corner_text"
                    android:gravity="center"
                    android:padding="@dimen/m_5"
                    android:text="1"
                    android:textSize="@dimen/s_16"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/m_10">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_warning_levels"
                android:textStyle="bold"
                tools:ignore="Suspicious0dp"
                android:layout_marginBottom="@dimen/m_10"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/m_5">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_low"
                    tools:ignore="Suspicious0dp" />

                <TextView
                    android:id="@+id/txt_warning_low"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/m_10"
                    android:layout_weight="1"
                    android:background="@drawable/round_corner_text"
                    android:gravity="center"
                    android:padding="@dimen/m_5"
                    android:text="1"
                    android:textSize="@dimen/s_16"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt_lbl_warning_high"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/m_16"
                    android:layout_weight="0.1"
                    android:text="@string/lbl_High"
                    tools:ignore="Suspicious0dp" />

                <TextView
                    android:id="@+id/txt_warning_high"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/m_10"
                    android:layout_weight="1"
                    android:background="@drawable/round_corner_text"
                    android:gravity="center"
                    android:padding="@dimen/m_5"
                    android:text="1"
                    android:textSize="@dimen/s_16"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/m_10">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.4"
                android:text="@string/lbl_repeat_frequency"
                android:textStyle="bold"
                tools:ignore="Suspicious0dp" />


            <TextView
                android:id="@+id/txt_update_frequency"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/round_corner_text"
                android:gravity="center"
                android:padding="@dimen/m_5"
                android:text="01:02:55s"
                android:textSize="@dimen/s_16"
                android:textStyle="bold"
                android:textColor="@color/blue"
               />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>