<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_parent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/m_10"
    android:elevation="@dimen/m_10"
    app:cardCornerRadius="@dimen/m_16">

    <LinearLayout
        android:id="@+id/lin_parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#4895D3"
        android:orientation="vertical"
        android:padding="@dimen/m_10">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/m_5"
            android:layout_weight="0.5"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_temperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_horizontal"
                android:text="0\u00B0 C"
                android:textColor="@color/white"
                android:textSize="@dimen/s_70"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_sensor_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/white"
                android:textSize="@dimen/s_18"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_sensor_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/red"
                android:textSize="@dimen/s_12" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/m_5"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/lbl_alarm_levels"
                android:textColor="@color/white"
                android:textStyle="bold"
                tools:ignore="Suspicious0dp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:padding="@dimen/m_5">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/m_5"
                android:text="@string/lbl_low"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:textStyle="bold"
                tools:ignore="Suspicious0dp" />

            <TextView
                android:id="@+id/txt_alarm_low"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/m_5"
                android:layout_marginBottom="@dimen/m_5"
                android:layout_marginStart="@dimen/m_10"
                android:layout_marginEnd="@dimen/m_10"
                android:layout_weight="1"
                android:background="@drawable/round_corner_white_text"
                android:gravity="center"
                android:padding="@dimen/m_5"
                android:text="1"
                android:textColor="@color/white"
                android:textSize="@dimen/s_18"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/txt_lbl_alarm_high"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/m_5"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/m_5"
                android:text="@string/lbl_High"
                android:textColor="@color/white"
                android:textStyle="bold"
                tools:ignore="Suspicious0dp" />

            <TextView
                android:id="@+id/txt_alarm_high"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/m_5"
                android:layout_marginBottom="@dimen/m_5"
                android:layout_marginStart="@dimen/m_10"
                android:layout_marginEnd="@dimen/m_10"
                android:layout_weight="1"
                android:background="@drawable/round_corner_white_text"
                android:gravity="center"
                android:padding="@dimen/m_5"
                android:text="1"
                android:textColor="@color/white"
                android:textSize="@dimen/s_16"
                android:textStyle="bold" />


        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>